[package]
name = "lvm2_cmd"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.0"
serde = { version = "1.0.148", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1.0.89"
which = "4.3.0"

log = { version = "0.4.17", optional = true }

[features]
default = [ "logging" ]
logging = [ "log" ]
